--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(cpputils)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "-O2 -lpthread")
 
-add_executable(cpputils main.cpp thread_pool.h safe_queue.h timer.h)
+add_executable(cpputils main.cpp thread_pool.h safe_queue.h timer.h traits.h)
